# productivity-analyzer

./: .gitignore  CLAUDE.md  README.md  vercel.json
backend/: .env.example  ai_enrichment.py  config.py  github_client.py  metrics.py  pyproject.toml  requirements.txt
backend/api/: main.py
backend/data/: config.json
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  metricDefs.ts
frontend/src/components/: ConfigPanel.tsx  Dashboard.tsx  EngineerCard.tsx  MetricsBreakdown.tsx  ProjectStats.tsx  PullProgress.tsx  Tooltip.tsx
frontend/src/hooks/: useConfig.ts  useMetrics.ts
frontend/src/types/: index.ts
frontend/src/utils/: Api.ts
